# sistema-analisis-inteligente

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md
data/: README.md
data/samples/: clientes.csv  generate_sample.py
docs/: api_contract.md
smarteda/: __init__.py  __main__.py  cleaning.py  config.py  engine.py  exceptions.py  ingestion.py  insights.py  logger.py  models.py  preprocessing.py  profiling.py
smarteda/analysis/: __init__.py  anomaly.py  clustering.py  correlation.py
tests/: conftest.py  test_anomaly.py  test_cleaning.py  test_clustering.py  test_correlation.py  test_engine.py  test_ingestion.py  test_profiling.py
